--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ div2[class*="box--"]{
     width: 80px;
     height: 80px;
     border: 2px solid black;
-    background-color: blue;
+    background-color: aqua;
 }
 div3[class*="box--"]{
     width: 80px;
@@ -27,7 +27,4 @@ div4[class*="box--"]{
     height: 80px;
     border: 2px solid black;
     background-color: red;
-}
-.ciao{
-   
 }
